apps/kubevirt/resources/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cdi-uploadproxy
  namespace: cdi
spec:
  gatewayClassName: cilium
  listeners:
    - name: tls
      protocol: TLS
      port: 443
      hostname: "cdi-upload.engiqueersconcordia.ca"
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: TLSRoute
metadata:
  labels:
    cdi.kubevirt.io: cdi-uploadproxy
  name: cdi-uploadproxy
  namespace: cdi
spec:
  hostnames:
    - cdi-upload.engiqueersconcordia.ca
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: engiqueers-passthrough
      namespace: cdi
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: cdi-uploadproxy
          port: 443
          weight: 1
